# VCT-Data-Lab

./: .gitattributes  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
apps/playoff_odds_react/: index.html  package-lock.json  package.json  tsconfig.json
apps/playoff_odds_streamlit/: app.py
apps/role_ranker_streamlit/: README.md  elo_app.py  tournament_app.py
data/: README.md
data/assets/: agent_assets.csv  team_assets.csv
data/marts/: agent_map_stats.csv  agent_synergy.csv  meta_trends.csv  team_agent_stats.csv  team_compositions.csv  team_map_stats.csv  team_signatures.csv
data/models/: agent_global_meta.csv  agent_meta_presence.csv  agent_pair_patterns.csv  agent_tiers.csv  composition_archetypes.csv  composition_clusters.csv  composition_patterns.csv  insights.json  map_specialists.csv  team_map_identity.csv  team_profile_scores.csv  team_strengths.csv  team_tactical_profiles.csv
data/playoff_odds/: config.sample.json  sample.json  vct-emea-2026-whatif.json  (+1 more)
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json
notebooks/: Untitled.ipynb  valorant_agents_modeling_insights.ipynb  valorant_map_first_agents_analysis.ipynb
scripts/: legacy_aggregate_vlr.py  legacy_transform_vlr.py  run_pipeline.py  scrape_ranker_players.py
tests/: test_api_contract.py  test_modeling.py  test_processing_quality_report.py  test_role_ranker_elo_matchmaking.py  test_role_ranker_elo_roles.py  test_role_ranker_storage.py  test_role_ranker_tournament_matchmaking.py  test_role_ranker_tournament_roles.py  test_utils.py
(+94 files in other folders)
